--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   isar: *isar_version
   isar_flutter_libs: *isar_version # contains Isar Core
   cupertino_icons: ^1.0.2
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
