--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   isar_flutter_libs: *isar_version # contains Isar Core
   cupertino_icons: ^1.0.2
   path_provider: ^2.0.11
+  share_plus: ^6.3.0
+  logger: ^1.4.0
+
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +60,4 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  
