--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   isar: *isar_version
   isar_flutter_libs: *isar_version # contains Isar Core
   cupertino_icons: ^1.0.2
-  path_provider: ^2.0.11
+  path_provider: 2.0.15
   share_plus: ^6.3.0
   logger: ^1.4.0
 
