--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,28 +8,26 @@ version: 1.0.0+1
 environment:
   sdk: '>=2.18.5 <3.0.0'
 
-isar_version: &isar_version 3.0.5 # define the version to be used
-
 dependencies:
   flutter:
     sdk: flutter
-  isar: *isar_version
-  isar_flutter_libs: *isar_version # contains Isar Core
+  isar: 3.0.5 
+  isar_flutter_libs: 3.0.5
   cupertino_icons: ^1.0.2
   path_provider: 2.0.15
   share_plus: ^6.3.0
+  flutter_animate: ^4.2.0+1
   logger: ^1.4.0
   document_file_save_plus: ^2.0.0
   flutter_document_picker: ^5.2.3
+  shimmer: ^3.0.0
   animations: ^2.0.7
-
-
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  isar_generator: *isar_version
+  isar_generator: 3.0.5
   build_runner: any
 
   flutter_lints: ^2.0.0
@@ -37,7 +35,9 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
-
+  assets:
+    - assets/avatar_logo.png
+    - assets/placeholder_image.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
